@@ -7,13 +7,11 @@ import com.masteryhub.todoapp.models.UserEntity;
 import com.masteryhub.todoapp.repository.UserRepository;
 import com.masteryhub.todoapp.security.JwtGenerator;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
-import org.springframework.data.domain.Sort;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
+import java.time.Instant;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
@@ -46,7 +44,11 @@ public class TodoService {
         int start = Math.min(page * size, todos.size());
         int end = Math.min(start + size, todos.size());
         List<TodoEntity> paginatedTodos = todos.subList(start, end);
-        return new ResponseEntity<>(paginatedTodos, HttpStatus.OK);
+        List<TodoDto> todoDtosList = paginatedTodos.stream()
+                .filter(todo -> todo.getDeletedAt() == null)
+                .map(TodoDto::new)
+                .collect(Collectors.toList());
+        return new ResponseEntity<>(todoDtosList, HttpStatus.OK);
     }
 
     public ResponseEntity<?> createTodo(String token, TodoDto todoDto) {
@@ -60,6 +62,8 @@ public class TodoService {
         todo.setTitle(todoDto.getTitle());
         todo.setDescription(todoDto.getDescription());
         todo.setStatus(todoDto.getStatus());
+        todo.setCreatedAt(Instant.now().toString());
+        todo.setUpdatedAt(Instant.now().toString());
         if (user.get().getTodolist() == null) {
             todo.setId(1L);
         } else {
@@ -88,6 +92,7 @@ public class TodoService {
                 todo.setTitle(todoDto.getTitle());
                 todo.setDescription(todoDto.getDescription());
                 todo.setStatus(todoDto.getStatus());
+                todo.setUpdatedAt(Instant.now().toString());
                 userRepository.save(user.get());
                 return new ResponseEntity<>("Todo updated successfully", HttpStatus.OK);
             }
@@ -123,7 +128,11 @@ public class TodoService {
         List<TodoEntity> todos = user.get().getTodolist();
         for (TodoEntity todo : todos) {
             if (todo.getId().equals(id)) {
-                return new ResponseEntity<>(todo, HttpStatus.OK);
+                if (todo.getDeletedAt() != null) {
+                    return new ResponseEntity<>("Todo not found", HttpStatus.BAD_REQUEST);
+                }
+                TodoDto todoDto = new TodoDto(todo);
+                return new ResponseEntity<>(todoDto, HttpStatus.OK);
             }
         }
         return new ResponseEntity<>("Todo not found", HttpStatus.BAD_REQUEST);
@@ -161,8 +170,15 @@ public class TodoService {
         if (page > 0) page--;
         int start = Math.min(page * size, todos.size());
         int end = Math.min(start + size, todos.size());
-        List<TodoEntity> paginatedTodos = todos.stream().filter(todo -> todo.getStatus().equals(statusEnum)).toList().subList(start, end);
-        return new ResponseEntity<>(paginatedTodos, HttpStatus.OK);
+        List<TodoEntity> paginatedTodos = todos.stream()
+                .filter(todo -> todo.getStatus().equals(statusEnum))
+                .filter(todo -> todo.getDeletedAt() == null)
+                .toList();
+        paginatedTodos = paginatedTodos.subList(start, Math.min(end, paginatedTodos.size()));
+        List<TodoDto> todoDtosList = paginatedTodos.stream()
+                .map(TodoDto::new)
+                .collect(Collectors.toList());
+        return new ResponseEntity<>(todoDtosList, HttpStatus.OK);
     }
 
     public ResponseEntity<?> deleteManyTodos(String token, String ids) {
@@ -204,10 +220,130 @@ public class TodoService {
                     todo.setTitle(todoDto.getTitle());
                     todo.setDescription(todoDto.getDescription());
                     todo.setStatus(todoDto.getStatus());
+                    todo.setUpdatedAt(Instant.now().toString());
                 }
             }
         }
         userRepository.save(user.get());
         return new ResponseEntity<>("Todos updated successfully", HttpStatus.OK);
     }
+
+    public ResponseEntity<?> softDeleteTodo(String token, Long id) {
+        token = token.substring(7);
+        String username = jwtGenerator.getUsernameFromJWT(token);
+        Optional<UserEntity> user = userRepository.findByUsername(username);
+        if (user.isEmpty()) {
+            return new ResponseEntity<>("User not found", HttpStatus.BAD_REQUEST);
+        }
+        List<TodoEntity> todos = user.get().getTodolist();
+        for (TodoEntity todo : todos) {
+            if (todo.getId().equals(id)) {
+                todo.setDeletedAt(Instant.now().toString());
+                userRepository.save(user.get());
+                return new ResponseEntity<>("Todo soft deleted successfully", HttpStatus.OK);
+            }
+        }
+        return new ResponseEntity<>("Todo not found", HttpStatus.BAD_REQUEST);
+    }
+
+    public ResponseEntity<?> softDeleteAllTodo(String token) {
+        token = token.substring(7);
+        String username = jwtGenerator.getUsernameFromJWT(token);
+        Optional<UserEntity> user = userRepository.findByUsername(username);
+        if (user.isEmpty()) {
+            return new ResponseEntity<>("User not found", HttpStatus.BAD_REQUEST);
+        }
+        List<TodoEntity> todos = user.get().getTodolist();
+        for (TodoEntity todo : todos) {
+            todo.setDeletedAt(Instant.now().toString());
+        }
+        userRepository.save(user.get());
+        return new ResponseEntity<>("All todos soft deleted successfully", HttpStatus.OK);
+    }
+
+    public ResponseEntity<?> softDeleteManyTodo(String token, String ids) {
+        token = token.substring(7);
+        String username = jwtGenerator.getUsernameFromJWT(token);
+        Optional<UserEntity> user = userRepository.findByUsername(username);
+        if (user.isEmpty()) {
+            return new ResponseEntity<>("User not found", HttpStatus.BAD_REQUEST);
+        }
+        List<Long> idList;
+        try {
+            idList = Arrays.stream(ids.split(","))
+                    .map(String::trim) // Remove spaces
+                    .map(Long::parseLong) // Convert to Long
+                    .collect(Collectors.toList());
+        } catch (NumberFormatException e) {
+            return new ResponseEntity<>("Invalid ID format. IDs must be numbers.", HttpStatus.BAD_REQUEST);
+        }
+        List<TodoEntity> todos = user.get().getTodolist();
+        for (TodoEntity todo : todos) {
+            if (idList.contains(todo.getId())) {
+                todo.setDeletedAt(Instant.now().toString());
+            }
+        }
+        userRepository.save(user.get());
+        return new ResponseEntity<>("All todos soft deleted successfully", HttpStatus.OK);
+    }
+
+    public ResponseEntity<?> restoreTodo(String token, Long id) {
+        token = token.substring(7);
+        String username = jwtGenerator.getUsernameFromJWT(token);
+        Optional<UserEntity> user = userRepository.findByUsername(username);
+        if (user.isEmpty()) {
+            return new ResponseEntity<>("User not found", HttpStatus.BAD_REQUEST);
+        }
+        List<TodoEntity> todos = user.get().getTodolist();
+        for (TodoEntity todo : todos) {
+            if (todo.getId().equals(id)) {
+                todo.setDeletedAt(null);
+                userRepository.save(user.get());
+                return new ResponseEntity<>("Todo restored successfully", HttpStatus.OK);
+            }
+        }
+        return new ResponseEntity<>("Todo not found", HttpStatus.BAD_REQUEST);
+    }
+
+    public ResponseEntity<?> restoreAllTodo(String token) {
+        token = token.substring(7);
+        String username = jwtGenerator.getUsernameFromJWT(token);
+        Optional<UserEntity> user = userRepository.findByUsername(username);
+        if (user.isEmpty()) {
+            return new ResponseEntity<>("User not found", HttpStatus.BAD_REQUEST);
+        }
+        List<TodoEntity> todos = user.get().getTodolist();
+        for (TodoEntity todo : todos) {
+            todo.setDeletedAt(null);
+        }
+        userRepository.save(user.get());
+        return new ResponseEntity<>("All todos restored successfully", HttpStatus.OK);
+    }
+
+    public ResponseEntity<?> restoreManyTodo(String token, String ids) {
+        token = token.substring(7);
+        String username = jwtGenerator.getUsernameFromJWT(token);
+        Optional<UserEntity> user = userRepository.findByUsername(username);
+        if (user.isEmpty()) {
+            return new ResponseEntity<>("User not found", HttpStatus.BAD_REQUEST);
+        }
+        List<Long> idList;
+        try {
+            idList = Arrays.stream(ids.split(","))
+                    .map(String::trim) // Remove spaces
+                    .map(Long::parseLong) // Convert to Long
+                    .collect(Collectors.toList());
+        } catch (NumberFormatException e) {
+            return new ResponseEntity<>("Invalid ID format. IDs must be numbers.", HttpStatus.BAD_REQUEST);
+        }
+        List<TodoEntity> todos = user.get().getTodolist();
+        for (TodoEntity todo : todos) {
+            if (idList.contains(todo.getId())) {
+                todo.setDeletedAt(null);
+            }
+        }
+        userRepository.save(user.get());
+        return new ResponseEntity<>("All todos restored successfully", HttpStatus.OK);
+    }
+
 }
